fix:overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -37,8 +37,9 @@ select {
   }
 }
 
-html, body {
-  overflow-x: hidden;
+html,
+body {
+  overflow: hidden;
 }
 
 [data-zone] {
